# thaiengine

./: .gitignore  CMakeLists.txt  README.md
cmake/: CompileOption.cmake
fastinput/: .gitignore  Makefile  fasttextinputreader.cc  fasttextinputreader.gcda
src/: bench.cc  loader.cc  loader.h  main.cc  rss.c  rss.h  textinputreader.cc
src/libcounter/: CMakeLists.txt  counter.cpp  counter.h
src/libthaiengine/: CMakeLists.txt  database.cc  database.h  loader.cc  loader.h
