cmake_minimum_required(VERSION 3.3)
project(libthaiengine)

add_library(thaiengine STATIC loader.cc database.cc farmhash.cc)
target_compile_features(thaiengine PRIVATE cxx_auto_type)
target_compile_features(thaiengine PUBLIC cxx_nullptr)

include(TestBigEndian)
TEST_BIG_ENDIAN(IS_BIGENDIAN)
if(IS_BIGENDIAN)
	target_compile_definitions(thaiengine PRIVATE FARMHASH_BIG_ENDIAN)
	message(WARNING "Files from little endian machine will load incorrectly!")
else()
	target_compile_definitions(thaiengine PRIVATE FARMHASH_LITTLE_ENDIAN)
endif(IS_BIGENDIAN)

include(CompileOption)
if(NOT CMAKE_BUILD_TYPE MATCHES DEBUG)
    COMPILE_OPTION(thaiengine -march=native)
endif(NOT CMAKE_BUILD_TYPE MATCHES DEBUG)
